--- a/config/config.html
+++ b/config/config.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#config" id="config">Config</a></h1>
+                        <h1 id="config"><a class="header" href="#config">Config</a></h1>
 <p>This is the top level structure that your <code>dobby.toml</code> must adhere to to be valid. If you don't have a <code>dobby.toml</code> in the working directory or it isn't valid, you'll get an error right off the bat.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-toml">[[workflows]]
 name = &quot;First Workflow&quot;
 # Details here
@@ -186,7 +186,7 @@ name = &quot;Second Workflow&quot;
   Second Workflow
 </code></pre>
 <p>You can use your arrow keys to then select an option to run. The <code>&gt;</code> symbol indicates which workflow is selected. Pressing the <code>Enter</code> key on your keyboard will run the workflow.</p>
-<h2><a class="header" href="#see-also" id="see-also">See Also</a></h2>
+<h2 id="see-also"><a class="header" href="#see-also">See Also</a></h2>
 <ul>
 <li><a href="./workflow.html">Workflows</a> for details on defining entries to the <code>[[workflows]]</code> array</li>
 <li><a href="./jira.html">Jira</a> for details on defining <code>[jira]</code></li>
