--- a/config/jira.html
+++ b/config/jira.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#jira" id="jira">Jira</a></h1>
+                        <h1 id="jira"><a class="header" href="#jira">Jira</a></h1>
 <p>Details needed to use steps that reference Jira issues.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-TOML"># dobby.toml
 
 [jira]
