--- a/config/step/RebaseBranch.html
+++ b/config/step/RebaseBranch.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#rebasebranch-step" id="rebasebranch-step">RebaseBranch step</a></h1>
+                        <h1 id="rebasebranch-step"><a class="header" href="#rebasebranch-step">RebaseBranch step</a></h1>
 <p>Rebase the current branch onto the branch defined by <code>to</code>.</p>
-<h2><a class="header" href="#errors" id="errors">Errors</a></h2>
+<h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
 <p>Fails if any of the following are true:</p>
 <ol>
 <li>The current directory is not a Git repository.</li>
@@ -173,7 +173,7 @@
 <li>The repo is not on the tip of a branch (e.g. detached HEAD)</li>
 <li>Rebase fails (e.g. not a clean working tree)</li>
 </ol>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-toml">[[workflows]]
 name = &quot;Finish some work&quot;
     [[workflows.steps]]
