--- a/config/step/SelectJiraIssue.html
+++ b/config/step/SelectJiraIssue.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#selectjiraissue" id="selectjiraissue">SelectJiraIssue</a></h1>
+                        <h1 id="selectjiraissue"><a class="header" href="#selectjiraissue">SelectJiraIssue</a></h1>
 <p>Search for Jira issues by status and display the list of them in the terminal. User is allowed to select one issue which will then change the workflow's <a href="../../state/state.html">state</a> to <a href="../../state/IssueSelected.html">IssueSelected</a>.</p>
-<h2><a class="header" href="#errors" id="errors">Errors</a></h2>
+<h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
 <p>This step will fail if any of the following are true:</p>
 <ol>
 <li>The <a href="../../state/state.html">state</a> is already in <a href="../../state/IssueSelected.html">IssueSelected</a> before it executes.</li>
@@ -173,7 +173,7 @@
 <li>User does not select an issue (e.g. by pressing <code>Esc</code>).</li>
 <li>There is no <a href="../jira.html">Jira config</a> set.</li>
 </ol>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-toml">[[workflows]]
 name = &quot;Start some work&quot;
     [[workflows.steps]]
