--- a/installation.html
+++ b/installation.html
@@ -163,22 +163,22 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#installation" id="installation">Installation</a></h1>
-<h2><a class="header" href="#install-via-cargo-recommended" id="install-via-cargo-recommended">Install via Cargo (Recommended)</a></h2>
+                        <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
+<h2 id="install-via-cargo-recommended"><a class="header" href="#install-via-cargo-recommended">Install via Cargo (Recommended)</a></h2>
 <p>Dobby is written in Rust and published on <a href="https://crates.io/crates/dobby">crates.io</a> which means it can therefore be installed by:</p>
 <ol>
 <li>Installing cargo via <a href="https://rustup.rs">Rustup</a></li>
 <li>Running <code>cargo install dobby</code></li>
 </ol>
-<h2><a class="header" href="#install-from-source" id="install-from-source">Install from Source</a></h2>
+<h2 id="install-from-source"><a class="header" href="#install-from-source">Install from Source</a></h2>
 <ol>
 <li>Install the current Rust stable toolchain via <a href="https://rustup.rs">Rustup</a></li>
 <li>Clone <a href="https://github.com/triaxtec/dobby/">the GitHub repo</a></li>
 <li><code>cargo install --path .</code> in the cloned directory</li>
 </ol>
-<h2><a class="header" href="#download-a-binary" id="download-a-binary">Download a Binary</a></h2>
+<h2 id="download-a-binary"><a class="header" href="#download-a-binary">Download a Binary</a></h2>
 <p>We automatically build binaries for some platforms which can be found on the <a href="https://github.com/triaxtec/dobby/releases">Releases</a> page.</p>
-<h2><a class="header" href="#other" id="other">Other</a></h2>
+<h2 id="other"><a class="header" href="#other">Other</a></h2>
 <p>Have another method you'd prefer to use to install Dobby? Let us know by <a href="https://github.com/triaxtec/dobby/issues">opening a GitHub issue</a>.</p>
 
                     </main>
