--- a/state/Initial.html
+++ b/state/Initial.html
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#initial-state" id="initial-state">Initial State</a></h1>
+                        <h1 id="initial-state"><a class="header" href="#initial-state">Initial State</a></h1>
 <p>The starting <a href="./state.html">state</a> for all workflows, contains some config information only.</p>
 
                     </main>
