--- a/state/IssueSelected.html
+++ b/state/IssueSelected.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#issueselected-state" id="issueselected-state">IssueSelected State</a></h1>
+                        <h1 id="issueselected-state"><a class="header" href="#issueselected-state">IssueSelected State</a></h1>
 <p>This <a href="./state.html">state</a> indicates that work is being done against an issue in some project management platform. Currently the supported platforms are GitHub and Jira. Any <a href="../config/step/step.html">step</a> which requires this state must be proceeded by a step which triggers this state.</p>
-<h2><a class="header" href="#triggered-by" id="triggered-by">Triggered By</a></h2>
+<h2 id="triggered-by"><a class="header" href="#triggered-by">Triggered By</a></h2>
 <ul>
 <li><a href="../config/step/SelectJiraIssue.html">SelectJiraIssue</a></li>
 <li><a href="../config/step/SelectGitHubIssue.html">SelectGitHubIssue</a></li>
