--- a/state/state.html
+++ b/state/state.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#state" id="state">State</a></h1>
+                        <h1 id="state"><a class="header" href="#state">State</a></h1>
 <p>Throughout the course of a <a href="../config/workflow.html">workflow</a>, Dobby will often have to remember some information from previous steps to use in future steps. This is done using an internal <code>State</code>. All workflows start in the <a href="./Initial.html">Initial</a> state and may transition between a states depending on the <a href="../config/step/step.html">steps</a> that are run. For example, the <a href="../config/step/SelectJiraIssue.html">SelectJiraIssue</a> step will transition the workflow to the <a href="./IssueSelected.html">IssueSelected</a> state.</p>
-<h2><a class="header" href="#potential-states" id="potential-states">Potential States</a></h2>
+<h2 id="potential-states"><a class="header" href="#potential-states">Potential States</a></h2>
 <ul>
 <li><a href="./Initial.html">Initial</a></li>
 <li><a href="./IssueSelected.html">IssueSelected</a></li>
