--- a/config/github.html
+++ b/config/github.html
@@ -163,9 +163,9 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#github" id="github">GitHub</a></h1>
+                        <h1 id="github"><a class="header" href="#github">GitHub</a></h1>
 <p>Details needed to use steps that reference GitHub repos.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-TOML"># dobby.toml
 
 [github]
