--- a/config/step/BumpVersion.html
+++ b/config/step/BumpVersion.html
@@ -163,34 +163,34 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#bumpversion-step" id="bumpversion-step">BumpVersion step</a></h1>
+                        <h1 id="bumpversion-step"><a class="header" href="#bumpversion-step">BumpVersion step</a></h1>
 <p>Bump the version of the project in any supported formats found using a <a href="https://semver.org">Semantic Versioning</a> rule.</p>
-<h2><a class="header" href="#supported-formats" id="supported-formats">Supported Formats</a></h2>
+<h2 id="supported-formats"><a class="header" href="#supported-formats">Supported Formats</a></h2>
 <p>These are the types of files that this step knows how to search for a semantic version and bump. Dobby currently will only search the current directory for these files.</p>
 <ol>
 <li>Cargo.toml for Rust projects</li>
 <li>pyproject.toml for Python projects (using <a href="https://python-poetry.org">Poetry's metadata</a>)</li>
 <li>package.json for Node projects</li>
 </ol>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-toml">[[workflows.steps]]
 type = &quot;BumpVersion&quot;
 rule = &quot;Pre&quot;
 value = &quot;rc&quot;
 </code></pre>
 <p>Where <code>rule</code> defines the <a href="https://semver.org">Semantic Versioning</a> rule to use and <code>value</code> is optional depending on the <code>rule</code>.</p>
-<h2><a class="header" href="#rules" id="rules">Rules</a></h2>
-<h3><a class="header" href="#major" id="major">Major</a></h3>
+<h2 id="rules"><a class="header" href="#rules">Rules</a></h2>
+<h3 id="major"><a class="header" href="#major">Major</a></h3>
 <p>Increment the Major component of the semantic version and reset all other components (e.g. 1.2.3-rc.4 -&gt; 2.0.0).</p>
-<h3><a class="header" href="#minor" id="minor">Minor</a></h3>
+<h3 id="minor"><a class="header" href="#minor">Minor</a></h3>
 <p>Increment the Minor component of the semantic version and reset all lesser components (e.g. 1.2.3-rc.4 -&gt; 1.3.0 ).</p>
-<h3><a class="header" href="#patch" id="patch">Patch</a></h3>
+<h3 id="patch"><a class="header" href="#patch">Patch</a></h3>
 <p>Increment the Patch component of the semantic version and reset all lesser components (e.g. 1.2.3-rc.4 -&gt; 1.2.4).</p>
-<h3><a class="header" href="#pre" id="pre">Pre</a></h3>
+<h3 id="pre"><a class="header" href="#pre">Pre</a></h3>
 <p>Increment the pre-release component of the semantic version or add it if missing. You must also provide a <code>value</code> parameter to this rule which will determine the pre-release string used. For example, running this rule with the <code>value</code> &quot;rc&quot; would change &quot;1.2.3-rc.4&quot; to &quot;1.2.3-rc.5&quot; or &quot;1.2.3&quot; to &quot;1.2.3-rc.0&quot;.</p>
-<h3><a class="header" href="#release" id="release">Release</a></h3>
+<h3 id="release"><a class="header" href="#release">Release</a></h3>
 <p>Remove the pre-release component of the semantic version (e.g. 1.2.3-rc.4 -&gt; 1.2.3).</p>
-<h2><a class="header" href="#errors" id="errors">Errors</a></h2>
+<h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
 <p>This step will fail if any of the following are true:</p>
 <ol>
 <li>A malformed version string is found while attempting to bump.</li>
