--- a/config/step/Command.html
+++ b/config/step/Command.html
@@ -163,18 +163,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#command-step" id="command-step">Command step</a></h1>
+                        <h1 id="command-step"><a class="header" href="#command-step">Command step</a></h1>
 <p>Run a command in your current shell after optionally replacing some variables. This step is here to cover the infinite things you might want to do that Dobby does not yet know how to do itself. If you have a lot of these steps or a complex <code>command</code>, we recommend you write a script in something like Bash or Python, then simply call that script with a command.</p>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>If the current version for your project is &quot;1.0.0&quot;, the following workflow step will run <code>git tag v.1.0.0</code> in your current shell.</p>
 <pre><code class="language-toml">[[workflows.steps]]
 type = &quot;Command&quot;
 command = &quot;git tag v.version&quot;
 variables = {&quot;version&quot; = &quot;Version&quot;}
 </code></pre>
-<h2><a class="header" href="#variables" id="variables">Variables</a></h2>
+<h2 id="variables"><a class="header" href="#variables">Variables</a></h2>
 <p>The <code>variables</code> attribute of this step is an object where the key is the string you wish to substitute and the value is one of the available variables listed below. <strong>take care when selecting a key to replace</strong> as <em>any</em> matching string that is found will be replaced. The order of this replacement is not guaranteed, so it is also possible for multiple variables to conflict with one another.</p>
-<h3><a class="header" href="#available-variables" id="available-variables">Available Variables</a></h3>
+<h3 id="available-variables"><a class="header" href="#available-variables">Available Variables</a></h3>
 <ol>
 <li>
 <p><code>Version</code> will attempt to parse the project version using the same method as the <a href="./BumpVersion.html">BumpVersion</a> step and substitute that string. It will select the first version found in any of the supported file names / formats to use for substitution. If no version can be found and parsed, this step will fail.</p>
