--- a/config/step/SwitchBranches.html
+++ b/config/step/SwitchBranches.html
@@ -163,16 +163,16 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#switchbranches-step" id="switchbranches-step">SwitchBranches step</a></h1>
+                        <h1 id="switchbranches-step"><a class="header" href="#switchbranches-step">SwitchBranches step</a></h1>
 <p>Uses the name of the currently selected issue to checkout an existing or create a new branch for development. If an existing branch is not found, the user will be prompted to select an existing local branch to base the new branch off of. Remote branches are not shown.</p>
-<h2><a class="header" href="#errors" id="errors">Errors</a></h2>
+<h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
 <p>This step fails if any of the following are true.</p>
 <ol>
 <li>Workflow is not in <a href="../../state/IssueSelected.html">IssueSelected</a> state.</li>
 <li>Current directory is not a Git repository</li>
 <li>There is uncommitted work on the current branch. You must manually stash or commit any changes before performing this step.</li>
 </ol>
-<h2><a class="header" href="#example" id="example">Example</a></h2>
+<h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><code class="language-toml">[[workflows]]
 name = &quot;Start some work&quot;
     [[workflows.steps]]
