--- a/config/step/UpdateProjectFromCommits.html
+++ b/config/step/UpdateProjectFromCommits.html
@@ -163,11 +163,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#updateprojectfromcommits-step" id="updateprojectfromcommits-step">UpdateProjectFromCommits step</a></h1>
+                        <h1 id="updateprojectfromcommits-step"><a class="header" href="#updateprojectfromcommits-step">UpdateProjectFromCommits step</a></h1>
 <p>This will look through all commits since the last tag and parse any <a href="https://www.conventionalcommits.org/en/v1.0.0/">Conventional Commits</a> it finds. It will then bump the project version (depending on the <a href="https://semver.org">Semantic Versioning</a> rule determined from the commits) and add a new Changelog entry using the <a href="https://keepachangelog.com/en/1.0.0/">Keep A Changelog</a> format.</p>
-<h2><a class="header" href="#limitations" id="limitations">Limitations</a></h2>
+<h2 id="limitations"><a class="header" href="#limitations">Limitations</a></h2>
 <p>The CHANGELOG format is pretty strict, it needs to have at least one version already in it and every version needs to be a level 2 header (<code>## 1.0.0</code>). Only three sections will be added to the new version, <code>### Breaking Changes</code> for anything that conventional commits have marked as breaking, <code>### Fixes</code> for anything called <code>fix:</code>, and <code>### Features</code> for anything with <code>feat: </code>. Any other commits (conventional or not) will be left out. A new version will <strong>always</strong> be generated though, even if there are no changes to record.</p>
-<h2><a class="header" href="#examples" id="examples">Examples</a></h2>
+<h2 id="examples"><a class="header" href="#examples">Examples</a></h2>
 <p>You can either provide an explicit path when declaring the step, like this:</p>
 <pre><code class="language-toml">[[workflows]]
 name = &quot;Release&quot;
@@ -177,7 +177,7 @@ name = &quot;Release&quot;
     changelog_path = &quot;docs/CHANGELOG.md&quot;
 </code></pre>
 <p>or omit the <code>changelog_path</code>, which will default it to &quot;CHANGELOG.md&quot; in the current directory.</p>
-<h2><a class="header" href="#errors" id="errors">Errors</a></h2>
+<h2 id="errors"><a class="header" href="#errors">Errors</a></h2>
 <p>The reasons this can fail:</p>
 <ol>
 <li>If there is no previous tag to base changes off of.</li>
